--- a/futsal/app/src/main/res/layout/activity_navigasi.xml
+++ b/futsal/app/src/main/res/layout/activity_navigasi.xml
@@ -1,40 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context="com.futsal2.futsal.NavigasiActivity">
+    tools:openDrawer="start">
 
-    <LinearLayout
+    <include
+        layout="@layout/app_bar_navigasi"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:measureWithLargestChild="false"
-        android:orientation="vertical"
-        >
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/layout_toolbar"
-            />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:actionBarTabTextStyle"
-            android:text="ini adalah contoh isi konten dengan widget textview yang diibungkus oleh navigasi drawer"
-            android:id="@+id/textView"
-            android:layout_gravity="center_horizontal"
-            />
-    </LinearLayout>
+        android:layout_height="match_parent" />
+
     <android.support.design.widget.NavigationView
-        android:id="@+id/navigation_view"
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
-        app:headerLayout="@layout/layout_header"
-        app:menu="@menu/item_navigasi"
-        />
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_navigasi"
+        app:menu="@menu/activity_navigasi_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
