--- a/futsal/app/src/main/res/layout/activity_register.xml
+++ b/futsal/app/src/main/res/layout/activity_register.xml
@@ -13,10 +13,10 @@
         android:ems="10"
         android:id="@+id/etName"
         android:hint="Name"
-        android:layout_above="@+id/etUsername"
+        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="14dp"
+        android:layout_marginTop="66dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -25,10 +25,10 @@
         android:layout_height="wrap_content"
         android:id="@+id/etUsername"
         android:hint="Username"
-        android:layout_above="@+id/etPassword"
+        android:layout_below="@+id/etName"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="14dp"
+        android:layout_marginTop="11dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -39,10 +39,10 @@
         android:ems="10"
         android:id="@+id/etPassword"
         android:hint="Password"
-        android:layout_marginBottom="15dp"
-        android:layout_above="@+id/etEmail"
+        android:layout_below="@+id/etUsername"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
+        android:layout_marginTop="14dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -51,10 +51,11 @@
         android:layout_height="wrap_content"
         android:text="Register"
         android:id="@+id/bRegister"
-        android:layout_alignParentBottom="true"
+        android:background="@color/colorPrimary"
+        android:layout_below="@+id/etEmail"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="34dp"
+        android:layout_marginTop="38dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
@@ -65,10 +66,10 @@
         android:ems="10"
         android:id="@+id/etEmail"
         android:hint="E-mail"
-        android:layout_above="@+id/bRegister"
+        android:layout_below="@+id/etPassword"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true"
-        android:layout_marginBottom="21dp"
+        android:layout_marginTop="10dp"
         android:layout_alignParentRight="true"
         android:layout_alignParentEnd="true" />
 
