--- a/futsal/app/src/main/res/layout/activity_splashscreen.xml
+++ b/futsal/app/src/main/res/layout/activity_splashscreen.xml
@@ -7,11 +7,9 @@
     tools:context="com.futsal2.futsal.Splashscreen">
 
     <ImageView
-        android:src="@drawable/futsal-sulut"
+        android:src="@drawable/fbar"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:scaleType="fitXY"
-        android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
     <ProgressBar
