--- a/futsal/app/src/main/res/layout/gallery.xml
+++ b/futsal/app/src/main/res/layout/gallery.xml
@@ -9,26 +9,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
-
+        
         <ImageView
             android:layout_gravity="center"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@mipmap/ic_launcher"/>
-
+            android:layout_height="wrap_content" 
+            android:background="@drawable/ic_menu_gallery"/>
+        
         <TextView
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="16dp"
             android:textStyle="bold"
-            android:text="Import Menu"/>
+            android:text="Gallery Menu"/>
 
         <TextView
-            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:text="www.F-Bar.com"/>
 
     </LinearLayout>
+
 </RelativeLayout>
