--- a/futsal/app/src/main/res/layout/nav_header_navigasi.xml
+++ b/futsal/app/src/main/res/layout/nav_header_navigasi.xml
@@ -22,10 +22,11 @@
         />
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="Android Studio"
+        android:text="Futsal Bareng"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         />
 
@@ -34,6 +35,6 @@
         android:layout_gravity="center"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="android.studio@android.com" />
+        android:text="F-Bar.com" />
 
 </LinearLayout>
