--- a/MyApplication1/app/src/main/res/layout/activity_buat_pertandingan.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_buat_pertandingan.xml
@@ -1,9 +1,99 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.futsal2.myapplication1.BuatPertandingan">
 
-</android.support.constraint.ConstraintLayout>
+    <EditText
+        android:id="@+id/inpilihtempat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="pilih tempat futsal"
+        android:layout_marginTop="11dp"
+        android:layout_below="@+id/inNolapangan"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/inNolapangan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="No Lapangan"
+        android:layout_marginTop="54dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/inMasukkanPemain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Masukkan Jumlah Pemain"
+        android:layout_below="@+id/inpilihtempat"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="11dp" />
+
+    <EditText
+        android:id="@+id/inMaxPemain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Maksimal Pemain"
+        android:layout_marginTop="12dp"
+        android:layout_below="@+id/inMasukkanPemain"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/inWaktumain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Waktu Main"
+        android:layout_below="@+id/inMaxPemain"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="14dp" />
+
+    <EditText
+        android:id="@+id/inJamMain"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Jam Main"
+        android:layout_below="@+id/inPemainyangada"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
+
+    <EditText
+        android:id="@+id/inPemainyangada"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Pemain Yang ada"
+        android:layout_marginTop="13dp"
+        android:layout_below="@+id/inWaktumain"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:id="@+id/inNamaPertandingan"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Nama Pertandingan"
+        android:layout_below="@+id/inJamMain"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="10dp" />
+    <Button
+        android:id="@+id/bBuatper"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:hint="Buat Pertandingan"
+        android:textColorHint="#000000"
+        android:layout_marginBottom="33dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+</RelativeLayout>
