--- a/MyApplication1/app/src/main/res/menu/activity_home_drawer.xml
+++ b/MyApplication1/app/src/main/res/menu/activity_home_drawer.xml
@@ -23,7 +23,7 @@
     <item android:title="Communicate">
         <menu>
             <item
-                android:id="@+id/nav_share"
+                android:id="@+id/keluar"
                 android:title="Keluar"/>
         </menu>
     </item>
