--- a/MyApplication1/app/src/main/res/layout/activity_register.xml
+++ b/MyApplication1/app/src/main/res/layout/activity_register.xml
@@ -9,61 +9,100 @@
 ]]<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#33CCFF"
     android:scrollbarStyle="insideInset">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_gravity="bottom"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical">
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/logo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            android:layout_gravity="center"
+            android:background="@drawable/fbar" />
+
+        <TextView
+            android:id="@+id/TextView1"
             android:layout_width="wrap_content"
-            android:layout_height="249dp"
-            android:layout_alignParentTop="true"
-            android:layout_marginBottom="90dp"
-            android:layout_weight="1.26"
-            android:src="@drawable/fbar" />
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="5dp"
+            android:layout_marginTop="20dp"
+            android:text="www.F-Bar.com"
+            android:textSize="18dip"
+            android:textStyle="bold" />
+
+        <View
+            android:id="@+id/View1"
+            android:layout_width="fill_parent"
+            android:layout_height="1dp"
+            android:layout_gravity="center"
+            android:background="#448AFF" />
+
+        <TextView
+            android:id="@+id/TextView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="30dip"
+            android:text="REGISTER BELOW"
+            android:textSize="16dip" />
 
         <EditText
-            android:id="@+id/name"
+            android:id="@+id/txt_username"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:hint="username"
-            android:paddingRight="10dp" />
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:hint="Username"
+            android:inputType="textEmailAddress"
+            android:singleLine="true" />
 
         <EditText
-            android:id="@+id/email"
+            android:id="@+id/txt_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:hint="E-Mail"
-            android:paddingRight="10dp" />
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:hint="Password"
+            android:password="true"
+            android:singleLine="true" />
 
         <EditText
-            android:id="@+id/password"
+            android:id="@+id/txt_confirm_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="10dp"
-            android:hint="insert password"
-            android:inputType="textPassword"
-            android:paddingRight="10dp" />
+            android:layout_gravity="center"
+            android:layout_margin="10dp"
+            android:hint="Comfirmation Password"
+            android:password="true" />
 
         <Button
-            android:id="@+id/register"
-            android:layout_width="match_parent"
+            android:id="@+id/btn_register"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="0dp"
-            android:paddingRight="10dp"
-            android:text="Register" />
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:background="#fff"
+            android:textColor="#000000"
+            android:text="Register"
+            android:textStyle="bold" />
 
+        <Button
+            android:id="@+id/btn_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="15dp"
+            android:background="#00555555"
+            android:text="Login"
+            android:textStyle="bold" />
 
     </LinearLayout>
 </ScrollView>
