--- a/MyApplication1/app/src/main/res/menu/activity_home_drawer.xml
+++ b/MyApplication1/app/src/main/res/menu/activity_home_drawer.xml
@@ -3,19 +3,19 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
+            android:id="@+id/nav_buatper"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="Buat pertandingan" />
         <item
-            android:id="@+id/nav_gallery"
+            android:id="@+id/nav_sunting"
             android:icon="@drawable/ic_about"
             android:title="Sunting" />
         <item
-            android:id="@+id/nav_slideshow"
+            android:id="@+id/nav_tempatfustal"
             android:icon="@drawable/ic_list"
             android:title="Tempat Futsal" />
         <item
-            android:id="@+id/nav_manage"
+            android:id="@+id/nav_detailper"
             android:icon="@drawable/ic_menu_manage"
             android:title="Detail Pertandingan" />
     </group>
